--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "googleapis": "^101.0.0",
+    "handlebars": "^4.7.7",
     "my-jsql": "^2.2.3",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.5",
     "otplib": "^12.0.1",
     "qrcode": "^1.5.0",
+    "referral-code-generator": "^1.0.8",
     "twilio-phone-verification": "^1.0.11"
   }
 }
