--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "bitcoin": "^3.0.1",
     "bitcore-wallet-client": "^8.25.27",
     "body-parser": "^1.20.0",
+    "ccunits": "^1.0.6",
     "cors": "^2.8.5",
+    "date-and-time": "^2.4.0",
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
+    "express-fileupload": "^1.4.0",
     "googleapis": "^101.0.0",
     "handlebars": "^4.7.7",
     "my-jsql": "^2.2.3",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.5",
+    "numeral": "^2.0.6",
     "otplib": "^12.0.1",
     "qrcode": "^1.5.0",
     "referral-code-generator": "^1.0.8",
